# pygments-plugin-systemverilog

./: README.md  SystemVerilog.tmLanguage  addr_policies.svh  pyproject.toml  sv_filter.py  sv_formatter.py  sv_lexer.py  sv_style.py
