[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygments-plugin-systemverilog" # change this to a package name for your plugin
version = "0.0.1"
dependencies = ["pygments"]
readme = "README.md"


# Declare plugin lexers in this table. The key (like `sv_lexer` below) are
# not significant. The value has the form `module_name:ClassName`. The lexer
# class will be imported using `from module_name import ClassName`.

# See the attributes declared in sv_lexer.py for how to configure the
# language names and file patterns.

[project.entry-points."pygments.lexers"]
sv_lexer = "sv_lexer:SVLexer"


# Declare plugin formatters in this table. The key is not significant and the
# value has the same format as for lexers. See sv_formatter.py for
# configuration options.

[project.entry-points."pygments.formatters"]
sv_formatter = "sv_formatter:SVFormatter"


# Declare plugin styles in this table. The key *is* significant: it is the name
# the style will be recognized as. In this example, we can use
#
#   pygmentize -Ostyle=sv-style"
#
# on the command line. Also,
#
#   pygments.styles.get_style_by_name("sv-style")
#
# will return the style class.

[project.entry-points."pygments.styles"]
sv-style-light = "sv_style:SVStyleLight"
sv-style-dark = "sv_style:SVStyleDark"


# Declare plugin filters in this table. The key *is* significant: it is the name
# the filter will be recognized as. In this example, we can use
#
#  pygmentize -F sv-filter
#
# on the command line. Also,
#
#   pygments.filters.find_filter_class("sv-filter")
#
# will return the filter class.

[project.entry-points."pygments.filters"]
sv-filter = "sv_filter:SVFilter"


# This is a test command. Running it should print:
#
# [ff0000]foo
# [black]<tab><tab>bar # tabs here
#
# - Our custom lexer highlights "foo" as keyword,
# - Our custom style uses red (ff0000) for keywords,
# - Our custom formatter prints colors in brackets,
# - Our custom filter replaces tabs with "<tab>".
#
# Run with
#
#   hatch run test

[tool.hatch.envs.default.scripts]
test = "pygmentize -l sv-lang -f sv-format -F sv-filter -O style=sv-style-light addr_policies.svh"
